<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8854E6"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/circle_run_1"
        android:layout_width="125dp"
        android:layout_height="112dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/run_selector"
        app:layout_constraintEnd_toStartOf="@+id/circle_run_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start" />

    <ImageView
        android:id="@+id/circle_run_2"
        android:layout_width="125dp"
        android:layout_height="112dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/run_selector"
        app:layout_constraintEnd_toStartOf="@+id/circle_run_3"
        app:layout_constraintStart_toEndOf="@+id/circle_run_1"
        app:layout_constraintTop_toBottomOf="@+id/button_pause" />

    <ImageView
        android:id="@+id/circle_run_3"
        android:layout_width="125dp"
        android:layout_height="112dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/run_selector"
        app:layout_constraintTop_toBottomOf="@+id/button_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circle_run_2"
        tools:layout_editor_absoluteX="275dp" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="268dp"
        android:layout_height="66dp"
        android:fontFamily="sans-serif"
        android:text="@string/hello_first_fragment"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_end"
        app:layout_constraintStart_toEndOf="@id/button_start"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <Button
        android:id="@+id/button_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_reset"
        app:layout_constraintStart_toEndOf="@id/button_pause"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_end"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <TextView
        android:id="@+id/gps_stats_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintTop_toBottomOf="@+id/textview_first"
        tools:layout_editor_absoluteX="42dp"
        tools:text="Elapsed time: 0 seconds. Points collected: 0" />

</androidx.constraintlayout.widget.ConstraintLayout>